--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Kode+Mono:wght@400..700&display=swap');
+
 *{
     margin: 0;
     box-sizing: border-box;
     padding: 0;
 }
 
+body{
+    font-family: Funnel Display;
+}
 .container_shoes{
 
     border: solid black 1px;
@@ -17,16 +22,17 @@
 .shoes_homepage{
     margin-top: 50px;
     border: solid red;
-    height: 45rem;
     width: 62rem;
+    
 }
 
 .image_1{
-    border: solid 3px rgb(133, 3, 3);
+    border: solid 3px rgb(3, 27, 133);
     width: 100%;
     height: 80%;
     display: block;
     padding: 15px;
+    
 
 }
 
@@ -34,8 +40,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+    border-radius: 15px;
 }
+
+
 
 .text{
     padding: 50px;
@@ -111,3 +119,76 @@
 }
 
 
+.paiment{
+    border: solid 1px cyan;
+    width: auto;
+    height: 100px;
+
+    
+}
+
+
+.pan1{
+    border: solid 1px rgb(52, 55, 80);
+    width: 100px;
+    height: 55px;
+    color: orangered;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600px;
+    font-size: 2em;
+}
+.pan0{
+    border: solid 1px rgb(52, 55, 80);
+    width: 40px;
+    height: 55px;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}
+.pan2{
+    border: solid 1px rgb(52, 55, 80);
+    width: 100px;
+    height: 55px;
+    border-radius: 10px;
+    color: orangered;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+}
+
+.payer{
+    border: solid 1px;
+    width: 300px;
+    height: 55px;
+    background-color: orangered;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    
+}
+
+.prix h2 {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    font-size: 30px;
+    border: solid crimson;
+    border-radius: 10px;
+    width: 155px;
+    align-items: center;
+    justify-content: center; 
+    
+}
+.payer button p{
+    text-decoration: none !important;
+    background-color: orangered !important;
+}
